8195115: G1 Old Gen MemoryPool CollectionUsage.used values don't reflect mixed GC results

Memory pools can now be optional collection participants, e.g., G1 Old Gen in an incremental collection.

Reviewed-by: ehelin, mchung